1.16
 * Bug Fixes:
   * EasyID3: Invalid keys now raise KeyError (and ValueError). [92]

1.15 - 2008.12.01
 * Bug Fixes:
   * mutagen.File: Import order no longer affects what type is returned.
   * mutagen.id3: Compression of frames is now disabled.
   * mutagen.flac.StreamInfo: Fix channel mask (support channels > 2). [35]
   * mutagen.mp3: Ignore Xing headers if they are obviously wrong.

1.14 - 2008.05.31
 * Bug Fixes:
   * MP4/M4A: Fixed saving of atoms with 64-bit size on 64-bit platforms.
   * MP4: Conversion of 'gnre' atoms to '\xa9gen' text atoms now correctly
     produces a list of string values, not just a single value.
   * ID3: Broken RVA2 frames are now discarded. (Vladislav Naumov)
   * ID3: Use long integers when appropriate.
  * VCommentDict: Raise UnicodeEncodeErrors when trying to use a Unicode
    key that is not valid ASCII; keys are also normalized to ASCII
    str objects. (Forest Bond)
 * Tests:
   * FLAC: Use 2**64 instead of 2**32 to test overflow behavior.

1.13 - 2007.12.03
 * Bug Fixes:
   * FLAC: Raise IOError, instead of UnboundLocalError, when trying
     to open a non-existant file. (Lukáš Lalinský, Debian #448734)
   * Throw out invalid frames when upgrading from 2.3 to 2.4.
   * Fixed reading of Unicode strings from ASF files on big-endian
     platforms.
 * TCP/TCMP support. (Debian #452231)
 * Faster implementation of file-writing when mmap fails, and
   exclusive advisory locking when available.
 * Test cases to ensure Mutagen is not vulnerable to CVE-2007-4619.
   It is not now, nor was it ever.
 * Use VBRI header to calculate length of VBR MP3 files if the Xing
   header is not found.

1.12 - 2007.08.04
 * Write important ID3v2 frames near the start. (Lukáš Lalinský)
 * Clean up distutils functions.

1.11 - 2007.04.26
 * New Features:
   * mid3v2 can now set URL frames. (Vladislav Naumov)
   * Musepack: Skip ID3v2 tags. (Lukáš Lalinský)
 * Bug Fixes:
   * mid3iconv: Skip all timestamp frames. (Lukáš Lalinský)